# yee_player

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md
asset/setting/: music_path.txt  setting.ron
asset/shader/: frag.glsl  frag.glsl.spv  shader.wgsl  vert.glsl  vert.glsl.spv
src/: buffer_player.rs  entity.rs  icon.rs  main.rs  renderer.rs
src/entity/: button.rs  resource.rs  slider.rs
