[package]
resolver = "2"
name = "yee_player"
version = "0.1.1"
authors = ["OTOMariK"]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
log = "0.4"
env_logger = "0.9"

winit = "0.26"
raw-window-handle = "0.4"
wgpu = "0.12"

legion = "0.4"

rodio = "0.15"

serde= "*"
ron = "0.7"
zerocopy= "0.6"

futures="0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"